--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,7 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: mv .npmrc.workflow .npmrc
+      - name: Rename .npmrc
+        run: mv .npmrc.workflow .npmrc
+      - name: Replace values
+        shell: bash
+        env:
+          PAT: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          sed -i.back "s|MY_PAT_SECRET|${PAT}|g" .npmrc
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
