--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate:images": "node utils/index.cjs",
+    "generate:groups": "node utils/groups.cjs",
     "pre-generate:images": "node utils/pre.cjs",
     "dev": "concurrently \"npm run watch:sass\" \"eleventy --serve\"",
     "watch:sass": "npx sass sass:_site/css --watch",
@@ -20,6 +21,7 @@
     "@11ty/eleventy": "^3.0.0",
     "@felicetteapp/img-loading": "^1.0.2",
     "@felicetteapp/img-loading-utils": "^0.0.4",
+    "chroma-js": "^3.1.2",
     "concurrently": "^9.1.2",
     "sass": "^1.83.4",
     "sharp": "^0.33.5",
