--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daily-tsuru-no-mundo",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +23,8 @@
     "@felicetteapp/img-loading-utils": "^0.0.4",
     "chroma-js": "^3.1.2",
     "concurrently": "^9.1.2",
+    "markdown-it": "^14.1.0",
+    "markdown-it-attrs": "^4.3.1",
     "sass": "^1.83.4",
     "sharp": "^0.33.5",
     "uuid": "^11.0.5"
