--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daily-tsuru-no-mundo",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,8 +24,10 @@
     "@felicetteapp/img-loading-utils": "^0.0.4",
     "chroma-js": "^3.1.2",
     "concurrently": "^9.1.2",
+    "highlight.js": "^11.11.1",
     "markdown-it": "^14.1.0",
     "markdown-it-attrs": "^4.3.1",
+    "markdown-it-container": "^4.0.0",
     "sass": "^1.83.4",
     "sharp": "^0.33.5",
     "uuid": "^11.0.5"
