--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daily-tsuru-no-mundo",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -30,6 +30,7 @@
     "canvas-constructor": "^7.0.2",
     "chroma-js": "^3.1.2",
     "concurrently": "^9.1.2",
+    "esbuild": "^0.25.5",
     "highlight.js": "^11.11.1",
     "markdown-it": "^14.1.0",
     "markdown-it-attrs": "^4.3.1",
@@ -39,7 +40,6 @@
     "skia-canvas": "^2.0.2",
     "typescript": "^5.8.3",
     "uuid": "^11.0.5",
-    "esbuild": "^0.25.5"
-  },
-  "dependencies": {}
+    "lenis": "^1.3.4"
+  }
 }
